# AnkiDictionaryBuilder

./: .gitignore  README.md  dictionary.db-journal  main.py  pyproject.toml  requirements.txt
ankidict.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dictionaries/: Aryanpur.info.json
input/: words.txt
src/ankidict/: logger.py
src/ankidict.egg-info/: SOURCES.txt  requires.txt
src/ankidict/core/: engine.py  models.py
src/ankidict/importers/: mdx.py
src/ankidict/parsers/: aryanpur.py
src/ankidict/repository/: base.py  sqlite.py
tests/: test_build_database.py  test_database.py  test_engine.py  test_importer.py  test_models.py  test_parser.py  test_query.py  test_save.py
tools/: inspect_dictionary.py
