[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ankidict"
version = "0.1.0"
description = "Anki Dictionary Builder"
requires-python = ">=3.12"

dependencies = [
    "beautifulsoup4",
    "lxml",
    "mdict-utils",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]